tests/rosetta/transpiler/Racket/ftp.rkt
;; Generated by Mochi 0.10.50 on 2025-07-30 23:37 +0700
#lang racket/base
(require racket/list racket/string racket/math racket/match json openssl/sha1)
(define nowSeed (let ([s (getenv "MOCHI_NOW_SEED")]) (and s (string->number s))))
(define (now)
  (if nowSeed
      (begin (set! nowSeed (modulo (+ (* nowSeed 1664525) 1013904223) 2147483647)) nowSeed)
      (inexact->exact (floor (* (current-inexact-milliseconds) 1000)))))
(define (int x)
  (cond
    [(number? x) (inexact->exact (truncate x))]
    [(string? x) (let ([n (string->number x)]) (if n (inexact->exact (truncate n)) 0))]
    [else 0]))
(define (float x)
  (cond
    [(number? x) (exact->inexact x)]
    [(string? x) (let ([n (string->number x)]) (if n (exact->inexact n) 0.0))]
    [else 0.0]))
(define (input) (read-line))
(define (upper s) (string-upcase s))
(define (lower s) (string-downcase s))
(define (sublist lst start end)
  (if (string? lst)
      (substring lst start end)
      (take (drop lst start) (- end start))))

(define (slice seq start end)
  (define len (if (string? seq) (string-length seq) (length seq)))
  (define s (int start))
  (define e (int end))
  (when (< s 0) (set! s (+ len s)))
  (when (< e 0) (set! e (+ len e)))
  (set! s (max 0 (min len s)))
  (set! e (max 0 (min len e)))
  (when (< e s) (set! e s))
  (if (string? seq) (substring seq s e) (sublist seq s e)))
(define (pad-start s width ch)
  (let ([s (format "~a" s)])
    (if (< (string-length s) width)
        (string-append (make-string (- width (string-length s)) (string-ref ch 0)) s)
        s)))
(define (index-of s ch)
  (let loop ([i 0])
    (cond [(>= i (string-length s)) -1]
          [(string=? (substring s i (add1 i)) ch) i]
          [else (loop (add1 i))])))
(define (_repeat s n)
  (cond
    [(string? s) (apply string-append (make-list (int n) s))]
    [(list? s) (apply append (make-list (int n) s))]
    [else '()]))
(define (_parse-int-str s base) (int (string->number s base)))
(define (_sha256 bs) (bytes->list (sha256-bytes (list->bytes bs))))
(define (num r) (numerator r))
(define (denom r) (denominator r))
(define (panic msg) (error msg))

(let* ([_start_mem (current-memory-use)] [_start (now)])
(define serverData (hash "pub" (hash "somefile.bin" "This is a file from the FTP server." "readme.txt" "Hello from ftp.")))
(define serverNames (hash "pub" (list "somefile.bin" "readme.txt")))
(define (connect hostport)
  (let/ec _return (begin
(displayln (string-append "Connected to " hostport))
(_return (hash "dir" "/"))
))
)
(define (login conn user pass)
  (let/ec _return (begin
(displayln (string-append "Logged in as " user))
))
)
(define (changeDir conn dir)
  (let/ec _return (begin
(set! conn (hash-set (or conn (hash)) "dir" dir))
))
)
(define (list conn)
  (let/ec _return (begin
(define names (if serverNames (hash-ref serverNames (if conn (hash-ref conn "dir" #f) #f) #f) #f))
(define dataDir (if serverData (hash-ref serverData (if conn (hash-ref conn "dir" #f) #f) #f) #f))
(define out (list))
(let/ec _break (for ([name names])
  (let/ec _cont
(define content (if dataDir (list-ref dataDir (int name)) #f))
(set! out (append out (list (hash "name" name "size" (cond [(string? content) (string-length content)] [(hash? content) (hash-count content)] [else (length content)]) "kind" "file"))))
  )))
(_return out)
))
)
(define (retrieve conn name)
  (let/ec _return (begin
(_return (if (if serverData (hash-ref serverData (if conn (hash-ref conn "dir" #f) #f) #f) #f) (list-ref (if serverData (hash-ref serverData (if conn (hash-ref conn "dir" #f) #f) #f) #f) (int name)) #f))
))
)
(define (main)
  (let/ec _return (begin
(define conn (connect "localhost:21"))
(login conn "anonymous" "anonymous")
(changeDir conn "pub")
(displayln (if conn (hash-ref conn "dir" #f) #f))
(define files (list conn))
(let/ec _break (for ([f files])
  (let/ec _cont
(displayln (string-append (string-append (if f (hash-ref f "name" #f) #f) " ") (format "~a" (if f (hash-ref f "size" #f) #f))))
  )))
(define data (retrieve conn "somefile.bin"))
(displayln (string-append (string-append "Wrote " (format "~a" (cond [(string? data) (string-length data)] [(hash? data) (hash-count data)] [else (length data)]))) " bytes to somefile.bin"))
))
)
(main)
  (let* ([_end (now)] [_end_mem (current-memory-use)]
         [_dur (- _end _start)]
         [_dur_us _dur]
         [_mem (max 0 (- _end_mem _start_mem))])
    (displayln "{")
    (displayln (format "  \"duration_us\": ~a," _dur_us))
    (displayln (format "  \"memory_bytes\": ~a," _mem))
    (displayln "  \"name\": \"main\"")
    (displayln "}")
  )
)
